# RoadEye

./: .gitignore  README.md  alembic.ini  pyproject.toml
configs/: base.yaml  yolo11m-nam.yaml
configs/states/: tasmania.yaml
notebooks/: RoadEye_Training.ipynb
scripts/: review_sources.py
src/roadkill/: __init__.py
src/roadkill/api/: __init__.py  app.py
src/roadkill/cli/: main.py
src/roadkill/config/: settings.py
src/roadkill/core/: species.py
src/roadkill/dashboard/: __init__.py  views.py
src/roadkill/dashboard/templates/: index.html
src/roadkill/database/: __init__.py  session.py
src/roadkill/database/migrations/: env.py
src/roadkill/database/migrations/versions/: 1be4dfe036e2_initial_migration_detection_events_and_.py
src/roadkill/database/models/: __init__.py  base.py  detection.py  hotspot.py
src/roadkill/detection/: __init__.py  deduplication.py  engine.py
src/roadkill/training/: auto_labeller.py  data_collection.py  nam_attention.py
tests/unit/core/: test_database.py  test_species.py
tests/unit/detection/: __init__.py  test_deduplication.py  test_engine.py
